[package]
name = "Project-Two-Games"
version = "0.1.0"
authors = ["Nette Mashewske", "Max Rose"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "engine2d"
path = "src/lib.rs"

[dependencies]
winit = "0.24.0"
winit_input_helper = "0.9.0"
image = "0.23.12"
rand = "0.5.0"
rodio = "0.13.1"
shaderc = "0.7"
cgmath = "0.17"
env_logger = "0.7"
log = "0.4"
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
clap = "2.33.3"

[dependencies.pixels]
git = "https://github.com/parasyte/pixels"

[dependencies.wgpu]
version = "0.7.0"
features = ["vulkan-portability"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"

[dependencies.synthrs]
git = "https://github.com/gyng/synthrs"

[[bin]]
name = "game_1"
path = "src/game-1/main.rs"

[[bin]]
name = "game_2"
path = "src/game-2/main.rs"
