[package]
name = "engine"
version = "0.1.0"
authors = ["Nette Mashewske", "Max Rose"]
edition = "2018"

# Our 3D Game engine dependencies
[lib]
crate-type = ["lib"]

[features]
default = []

[dependencies]
winit = "0.24.0"
winit_input_helper = "0.9.0"
image = "0.23.12"
rand = "0.5.0"
rodio = "0.13.1"
cgmath = "0.17"
env_logger = "0.7"
log = "0.4"
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
clap = "2.33.3"

[dependencies.wgpu]
version = "0.7.0"
features = ["vulkan-portability"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
spirv-builder = {git = "https://github.com/EmbarkStudios/rust-gpu", default-features = false, features = [ "use-compiled-tools" ], rev = "9c194148586dad8f8c27860af326c3f7f11409d6"}

[dependencies.synthrs]
git = "https://github.com/gyng/synthrs"