[package]
name = "engine3d"
version = "0.1.0"
authors = ["ZiangXue <ziangxue@outlook.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
futures = "0.3"
image = "0.23"
log = "0.4"
tobj = "2.0"
wgpu = "0.7"
winit = "0.24.0"
notify = "4.0.15"

[dependencies.gltf]
version="0.15.2"
features=["utils","import","names"]

[build-dependencies]
spirv-builder = {git = "https://github.com/EmbarkStudios/rust-gpu", default-features = false, features = [ "use-compiled-tools" ], rev = "9c194148586dad8f8c27860af326c3f7f11409d6"}

