[package]
name = "final-project"
version = "0.1.0"
authors = ["Ziang", "Valen Xie", "Nette Mashewske"]
edition = "2018"

# Our 3D Game engine dependencies
[lib]
crate-type = ["bin"]

[dependencies]
winit = "0.24.0"
winit_input_helper = "0.9.0"
image = "0.23.12"
rand = "0.5.0"
rodio = "0.13.1"
cgmath = "0.17"
env_logger = "0.7"
log = "0.4"
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
clap = "2.33.3"
engine = {path = "../../engine/"}

[dependencies.wgpu]
version = "0.7.0"
features = ["vulkan-portability"]

[dependencies.synthrs]
git = "https://github.com/gyng/synthrs"

[[bin]]
name = "final_project"
path = "src/lib.rs"