[package]
name = "game"
version = "0.1.0"
authors = ["ZiangXue <ziangxue@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine3d = {path = "../../engine3d/"}
env_logger = "0.7"
log = "0.4"
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
clap = "2.33.3"
rand = "0.8.3"
winit = "0.24.0"
cgmath = "0.18"

[dependencies.wgpu]
version = "0.7.0"
features = ["vulkan-portability"]

[dependencies.synthrs]
git = "https://github.com/gyng/synthrs"

[[bin]]
name = "final_project"
path = "src/lib.rs"