[package]
name = "cs181-unit2-game2"
version = "0.1.0"
authors = ["Nette Mashewske", "Max Rose"]
edition = "2018"

[lib]
crate-type = ["bin"]

[dependencies]
engine3d = {path = "../../engine"}
rodio = "0.13.1"
clap = "2.33.3"
winit = "0.24.0"
winit_input_helper = "0.9.0"
rand = "0.5.0"

[dependencies.wgpu]
version = "0.7.0"
features = ["vulkan-portability"]

[dependencies.synthrs]
git = "https://github.com/gyng/synthrs"

[[bin]]
name = "game_2"
path = "src/lib.rs"