[package]
name = "sprite_shader"
version = "0.1.0"
authors = ["Nette"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std-macros = "0.4.0-alpha.7"
spirv-std = "0.4.0-alpha.7"
glam = {version = "0.14", default-features = false, features = ["libm", "scalar-math", "spirv-std"]}
